feat: added map layers control
Former-commit-id: a99674c491327e81841996065781bf132bed12cc

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,7 +1,3 @@
-html,
-body,
-main {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
+version https://git-lfs.github.com/spec/v1
+oid sha256:842dbd9fa000be21390fcc5193f32bf2c4c0fb1eafb253cf3045cc361eb331d4
+size 65
