fix: restore file contents from git-lfs
Former-commit-id: b23ae8a13217759ae78b630626cfd8006ce1a112

--- a/app/src/components/map/map.css
+++ b/app/src/components/map/map.css
@@ -1,3 +1,3 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:bfb234c41eae374d31261daa775e22c62975774f7b2fb7efe3a79f8cee82d12a
-size 25
+.map {
+  height: 100%;
+}
